--- a/app/components/hero/Hero/Hero.module.scss
+++ b/app/components/hero/Hero/Hero.module.scss
@@ -9,11 +9,16 @@
     align-items: center;
 
     &__heading {
-        font-size: 40px;
-        line-height: 52px;
+        font-size: 35px;
+        line-height: 42px;
         color: white;
         text-align: center;
         margin-bottom: 8px;
+        
+        @media (min-width: 787px) {
+            font-size: 40px;
+            line-height: 52px;
+        }
     }
 
     &__description {
