--- a/app/components/hero/Input/Input.module.scss
+++ b/app/components/hero/Input/Input.module.scss
@@ -3,21 +3,47 @@
     align-items: center;
     margin: 24px 0;
     overflow: hidden;
-    width: 700px;
+    width: 100%;
     background-color: #fff;
+    
+    @media (min-width: 787px) {
+        width: 700px;
+    }
 
     &__input {
         flex: 1;
         background-color: transparent;
         border: none;
         color: black;
-        font-size: 1.2rem;
+        font-size: 14px;
         font-weight: 700;
-        padding: 12px 16px;
+        padding: 6px 8px;
         outline: none;
+
+        @media (min-width: 787px) {
+            font-size: 20px;
+            padding: 12px 16px;
+        }
     }
 
     &__checkboxes {
         display: flex;
+        flex-direction: column;
+
+        @media (min-width: 787px) {
+            flex-direction: row;
+        }
+    }
+
+    &__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        border: none;
+        color: white;
+        padding: 0 20px;
+        height: 46px;
+        background: transparent;
     }
 }
