--- a/app/components/hero/Input/Input.module.scss
+++ b/app/components/hero/Input/Input.module.scss
@@ -45,5 +45,10 @@
         padding: 0 20px;
         height: 46px;
         background: transparent;
+        transition: transform 0.6s ease;
+        
+        &:hover {
+            transform: rotate(720deg);
+        }
     }
 }
