--- a/app/components/hero/Hero/Hero.module.scss
+++ b/app/components/hero/Hero/Hero.module.scss
@@ -1,12 +1,16 @@
 .hero {
     background-color: black;
-    padding: 56px 20px 35px;
+    padding: 26px 20px 25px;
     max-width: 1160px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+
+    @media (min-width: 787px) {
+        padding: 56px 20px 35px;
+    }
 
     &__heading {
         font-size: 35px;
