--- a/app/components/hero/Input/Input.module.scss
+++ b/app/components/hero/Input/Input.module.scss
@@ -42,13 +42,17 @@
         cursor: pointer;
         border: none;
         color: white;
-        padding: 0 20px;
+        padding: 0 5px;
         height: 46px;
         background: transparent;
         transition: transform 0.6s ease;
-        
-        &:hover {
-            transform: rotate(720deg);
+
+        @media (min-width: 787px) {
+            padding: 0 20px;
+
+            &:hover {
+                transform: rotate(720deg);
+            }
         }
     }
 }
